# EightyTwentyFive

./: .gitignore  80x25.code-workspace  README.md  bookmarks_to_folder.py
ComputerCraft/: areacut.lua  bigreactor.lua  compact-shear.lua  kbturtle.lua  shockwave.lua  simple-bigreactor.lua  simple-bigturbine.lua  simple-draconicstorage.lua  snippets.lua  stateful.lua
ComputerCraft/Big Reactors/: big-commonlib.lua  big-interfaces.lua  bigreactor.lua  power-monitor.lua  simple-bigreactor.lua  simple-bigturbine.lua  simple-draconicstorage.lua
Pathfinder/: Pathfinder.csproj  Program.cs  README.md  Startup.cs  appsettings.example.json  appsettings.json.real
Pathfinder/Controllers/: MeshNodeController.cs  TodoItemsController.cs  WeatherForecastController.cs
Pathfinder/Migrations/: 20210103222039_InitialCreate.Designer.cs  20210103222039_InitialCreate.cs  MeshNodeContextModelSnapshot.cs
Pathfinder/Models/: AStar.cs  Base62.cs  DynamicMesh.cs  MeshNode.cs  TodoContext.cs  TodoItem.cs  Validations.cs
Pathfinder/Properties/: launchSettings.json
Python/: pyproject.toml  unique_files.py
Stationeers/: centrifuge.ic10  gas-generator-battmem.ic10  gas-generator.ic10  intake-pressure.ic10  thermostat.ic10
