[tool.poetry]
name = "80x25"
version = "0.1.0"
description = "Just some scripts"
authors = ["Lucas Savva <lucas@m1cr0man.com>"]
readme = "README.md"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 91
max-complexity = 16
select = ["A", "B", "C", "E", "F", "M", "N", "W", "B902", "B950"]
ignore = ["E203", "E501", "W503", "ANN101", "ANN102"]
exclude = ["dist/*", "build/*", "__pycache__", ".git", ".vscode", "*.egg-info"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.6.0"
rich-argparse = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-annotations = "^2.9.1"
flake8-assertive = "^2.1.0"
flake8-bugbear = "^22.10.27"
flake8-pyproject = "^1.1.0.post0"
flake8-comprehensions = "^3.10.1"
pep8-naming = "^0.13.2"
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
